# pyclean

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  checks.yml  packaging.yml  publish.yml  release-pypi.yml  test-suite.yml  test.yml  tests.yml  testsuite.yml
pyclean/: __init__.py  __main__.py  bytecode.py  cli.py  compat.py  debris.py  erase.py  folders.py  gitclean.py  ignore.py  main.py  modern.py  py2clean.py  py3clean.py  pyclean.py  pypyclean.py  runner.py  traversal.py
tests/: conftest.py  helpers.py  py3_mocks.py  test_cli.py  test_compat.py  test_debris.py  test_directory.py  test_erase.py  test_folders.py  test_gitclean.py  test_helpers.py  test_ignore.py  test_main.py  test_modern.py  test_package.py  test_runner.py  test_traversal.py  test_version.py
