[build-system]
requires = ["setuptools>=44"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclean"
version = "2.7.5"
description = "Pure Python cross-platform pyclean. Clean up your Python bytecode."
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Peter Bittner", email = "django@bittner.it"},
]
maintainers = [
  {name = "Peter Bittner", email = "django@bittner.it"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
]
keywords = [
  "python",
  "bytecode",
  "cli",
  "tools",
]

[project.scripts]
pyclean = "pyclean.cli:main"
py2clean = "pyclean.cli:py2clean"
py3clean = "pyclean.cli:py3clean"
pypyclean = "pyclean.cli:pypyclean"

[project.urls]
homepage = "https://github.com/bittner/pyclean"

[tool.black]
color = true

[tool.coverage.run]
source = ["pyclean"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --ignore=pyclean/py2clean.py --ignore=pyclean/py3clean.py --ignore=pyclean/pypyclean.py --junitxml=tests/junit-report.xml --verbose"

[tool.ruff]
extend-exclude = []
extend-select = ["B", "BLE", "C4", "C90", "COM", "DJ", "DTZ", "EM", "G", "I", "N", "PIE", "PL", "PT", "PTH", "R", "S", "SIM", "T10", "TID", "W", "YTT"]
extend-ignore = []

[tool.ruff.per-file-ignores]
"pyclean/cli.py" = ["B904", "BLE001"]
"pyclean/compat.py" = ["C408"]
"pyclean/modern.py" = ["B028", "B904"]
"pyclean/py2clean.py" = ["E402", "PTH"]
"pyclean/py3clean.py" = ["BLE001", "C901", "E402", "PLR1722", "PTH", "S110", "SIM105"]
"pyclean/pypyclean.py" = ["B007", "G002", "PTH", "S603"]
"tests/*.py" = ["S101"]

[tool.setuptools]
packages = ["pyclean"]
