# SPDX-FileCopyrightText: 2022 Peter Bittner <django@bittner.it>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77"]

[project]
name = "pyclean"
dynamic = ["version"]
description = "Pure Python cross-platform pyclean. Clean up your Python bytecode."
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICENSES/GPL-3.0-or-later.txt"]
authors = [
  {name = "Peter Bittner", email = "django@bittner.it"},
]
maintainers = [
  {name = "Peter Bittner", email = "django@bittner.it"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
]
keywords = [
  "python",
  "bytecode",
  "cli",
  "tools",
]
requires-python = ">=3.9"

[project.scripts]
pyclean = "pyclean.cli:main"

[project.urls]
homepage = "https://github.com/bittner/pyclean"

[tool.coverage.run]
source = ["pyclean"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --junitxml=tests/junit-report.xml --verbose"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["ANN", "B904", "D", "FBT002", "INP001", "Q000", "UP"]

[tool.ruff.lint.flake8-quotes]
inline-quotes="single"

[tool.ruff.lint.per-file-ignores]
"pyclean/cli.py" = ["BLE001"]
"tests/*.py" = ["ARG001", "S101"]

[tool.setuptools]
packages = ["pyclean"]

[tool.setuptools.dynamic]
version = {attr = "pyclean.__version__"}
